--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,34 @@
 body *{
     font-family:'Times New Roman', Times, serif;
 }
-div >.library-container{
-    --custom-color:#1d4ed8;
+.container {
+    background-color:#483C33;
     display:grid;
-    grid-template-columns: repeat(auto-fill,400px);
+    grid-template-columns:1fr;
+    grid-template-rows:200px 3fr;
+    grid-template-areas:
+        "header"
+        "body";
+    
+}
+div >.library-container{
+    grid-area: body;
+    --custom-color:#72541e;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,280px);
     grid-auto-rows: auto;
     gap:1rem 1rem;
     margin:4rem;
 }
 div > .library-header{
+    grid-area:header;
+    justify-self:stretch;
     margin:4rem;
     display:flex;
     justify-content: space-between;
+    color:white;
+    border-bottom: 2px solid #432e07
+
 }
 div > h1 {
     font-size:48px;
@@ -20,20 +36,21 @@ div > h1 {
 .library-container > .book-entry{
     background-color:var(--custom-color);
     color:whitesmoke;
-    border-radius: 0.5rem;
     display:flex;
     flex-direction: column;
     align-items:center;
     justify-content: space-between;
     flex-wrap: wrap;
-    border:0.1rem solid white;
+    border:none;
+    border-radius: 10px;
 }
 .book-entry > .book-container{
-    display:flex;
-    flex-direction: column;
-    justify-content:space-around;
     margin:1rem;
+    background-color: #553e15;
+    padding:0 2rem 0 2rem;
+    border-radius: 5px;
 }
+
 .book-entry > .book-info-container{
     display:flex;
     flex-direction: column;
@@ -43,8 +60,8 @@ div > h1 {
     gap:10px 10px;
     width:15rem;
 }
-.book-entry *:not(.title) {
-    font-size:14px;
+.book-entry *:not(.title):not(button) {
+    font-size:16px;
 }
 .book-entry > .book-info-container > p:nth-child(1){
     padding-top:1rem;
@@ -59,8 +76,10 @@ div > h1 {
     text-align: center;
 }
 .book-entry > button{
-    background-color:transparent;
+    background-color:red;
     border:none;
+    font-size:20px;
+    border-radius: 100%;
     color:white;
     align-self: flex-end;
     margin: 10px 10px 0 0;
@@ -68,4 +87,42 @@ div > h1 {
 }
 form > span > input[name="readingStatus"]{
     visibility:hidden;
+}
+.book-entry > span>button,
+div > button{
+    margin-bottom:20px;
+    font-size:18px;
+    border:none;
+    border-radius: 20px;
+    padding:5px 10px 5px 10px;
+    color:white;
+    font-weight: bold;
+}
+.book-entry > .book-container,
+.book-entry > span>button,
+.book-entry > button,
+div > button{
+    box-shadow: -2px 2px 5px 2px rgb(0,0,0,0.4);
+}
+.book-entry > span>button:nth-of-type(1),
+div > button{
+    background-color:green;
+}
+.book-entry > span>button:nth-of-type(2){
+    background-color:red;
+}
+.book-entry > button:hover,
+.book-entry > span>button:nth-of-type(2):hover{
+    background-color:rgba(255, 0, 0, 0.4);
+}
+.book-entry > button:active,
+.book-entry > span>button:nth-of-type(2):active{
+    background-color:rgba(116, 1, 1, 0.4);
+}
+.book-entry > span>button:nth-of-type(1):hover{
+    background-color:rgba(0, 128, 0, 0.4);
+}
+.book-entry > span>button:nth-of-type(1):active,
+div > button:active{
+    background-color:rgba(1, 91, 1, 1);
 }
