--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,16 @@
+:root{
+    --custom-color:#6c4b27;
+    --custom-background-color:#3e2e21;
+}
 body *{
     font-family:'Times New Roman', Times, serif;
 }
-.container {
-    background-color:#483C33;
+.background-color-container{
+    height:100vh;
+    overflow:auto;
+    background-color:var(--custom-background-color);
+}
+.grid-container {
     display:grid;
     grid-template-columns:1fr;
     grid-template-rows:200px 3fr;
@@ -12,8 +20,7 @@ body *{
     
 }
 div >.library-container{
-    grid-area: body;
-    --custom-color:#72541e;
+    grid-area: body; 
     display:grid;
     grid-template-columns: repeat(auto-fit,280px);
     grid-auto-rows: auto;
@@ -27,14 +34,20 @@ div > .library-header{
     display:flex;
     justify-content: space-between;
     color:white;
-    border-bottom: 2px solid #432e07
+    border-bottom: 3px solid #635538;
 
 }
 div > h1 {
     font-size:48px;
 }
-.library-container > .book-entry{
+.library-container > .book-entry,
+dialog{
     background-color:var(--custom-color);
+    border:10px solid var(--custom-background-color) ;
+    border-radius: 10px;
+}
+.library-container > .book-entry,
+dialog > .modal-container{
     color:whitesmoke;
     display:flex;
     flex-direction: column;
@@ -43,6 +56,7 @@ div > h1 {
     flex-wrap: wrap;
     border:none;
     border-radius: 10px;
+    
 }
 .book-entry > .book-container{
     margin:1rem;
@@ -50,8 +64,11 @@ div > h1 {
     padding:0 2rem 0 2rem;
     border-radius: 5px;
 }
-
 .book-entry > .book-info-container{
+    padding:0 2rem 0 2rem;
+}
+.book-entry > .book-info-container,
+form > .form-control-container{
     display:flex;
     flex-direction: column;
     justify-self: stretch;
@@ -59,6 +76,8 @@ div > h1 {
     margin:1rem;
     gap:10px 10px;
     width:15rem;
+    background-color: #553e15;
+    border-radius: 5px;
 }
 .book-entry *:not(.title):not(button) {
     font-size:16px;
@@ -88,41 +107,79 @@ div > h1 {
 form > span > input[name="readingStatus"]{
     visibility:hidden;
 }
+.form-control-container > .form-control{
+    margin-left:1rem;
+}
+.form-control-container > .form-control:nth-child(1){
+    margin-top:1rem;
+}
+.form-control-container > .form-control:nth-child(4){
+    margin-bottom:1rem;
+}
 .book-entry > span>button,
-div > button{
+div > button,
+dialog > .close-modal,
+form > button{
     margin-bottom:20px;
     font-size:18px;
-    border:none;
-    border-radius: 20px;
+    border-style:hidden;
+    outline:none;
+    border-radius: 10px;
     padding:5px 10px 5px 10px;
     color:white;
     font-weight: bold;
+  
 }
 .book-entry > .book-container,
 .book-entry > span>button,
 .book-entry > button,
-div > button{
+div > button,
+dialog > .close-modal,
+form > .submit-button{
     box-shadow: -2px 2px 5px 2px rgb(0,0,0,0.4);
 }
 .book-entry > span>button:nth-of-type(1),
-div > button{
+.library-header > button:nth-of-type(1),
+.book-entry > span > button,
+form > .submit-button{
     background-color:green;
 }
-.book-entry > span>button:nth-of-type(2){
+.book-entry > span>button:nth-of-type(2),
+div > .close-modal,
+.library-header > button:nth-of-type(2){
     background-color:red;
 }
 .book-entry > button:hover,
-.book-entry > span>button:nth-of-type(2):hover{
-    background-color:rgba(255, 0, 0, 0.4);
+.book-entry > span>button:nth-of-type(2):hover,
+div > .close-modal:hover,
+.library-header > button:nth-of-type(2):hover{
+    background-color:rgb(170, 0, 0);
 }
 .book-entry > button:active,
-.book-entry > span>button:nth-of-type(2):active{
-    background-color:rgba(116, 1, 1, 0.4);
+.book-entry > span>button:nth-of-type(2):active,
+div > .close-modal:active,
+.library-header > button:nth-of-type(2):active{
+    background-color:rgb(150, 0, 0);
 }
-.book-entry > span>button:nth-of-type(1):hover{
-    background-color:rgba(0, 128, 0, 0.4);
+.book-entry > span>button:nth-of-type(1):hover,
+form > .submit-button:hover,
+.library-header > button:nth-of-type(1):hover{
+    background-color:rgb(0, 108, 0);
+    
 }
 .book-entry > span>button:nth-of-type(1):active,
-div > button:active{
-    background-color:rgba(1, 91, 1, 1);
+div > button:active,
+form > .submit-button:active,
+.library-header > button:nth-of-type(1):active{
+    background-color:rgb(0, 90, 10);
+    
+}
+div > .close-modal{
+    align-self:end;
+}
+div > form {
+    display: flex;
+    flex-direction:column;
+    justify-content: center;
+    align-items:center;
 }
