--- a/css/index.css
+++ b/css/index.css
@@ -138,6 +138,14 @@ dialog > .close-modal,
 form > .submit-button{
     box-shadow: -2px 2px 5px 2px rgb(0,0,0,0.4);
 }
+.library-header > h1 {
+    margin-right:50px;
+}
+.library-header > button:nth-of-type(1){
+    margin-left:auto;
+    margin-right:2rem;
+    text-wrap: nowrap;
+}
 .book-entry > span>button:nth-of-type(1),
 .library-header > button:nth-of-type(1),
 .book-entry > span > button,
@@ -172,7 +180,6 @@ div > button:active,
 form > .submit-button:active,
 .library-header > button:nth-of-type(1):active{
     background-color:rgb(0, 90, 10);
-    
 }
 div > .close-modal{
     align-self:end;
